--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>❄️ Programmatic Holiday Movie Title Generator 🎄</title>
+  <link rel="preload" as="image" href="./assets/holiday-cozy-town.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root{ --bg:#0b0b0c; --card:#121214; --ink:#f5f5f7; --muted:#c9c9d1; --line:#27272a; --accent:#22d3ee; --accent2:#84cc16; }
@@ -13,7 +14,7 @@
       background-color:#0b0b0c; /* fallback */
       background-image:
         linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)),
-        url("cozy-streets-winter-snow-decorated-600nw-2394868437.webp");
+        url("./assets/holiday-cozy-town.webp");
       background-size: auto, cover;
       background-repeat: no-repeat, no-repeat;
       background-position: 0 0, center;
