--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
     /* removed: twinkling bokeh overlay to keep hero image clear */ to { opacity: .95; } }
     @keyframes twinkle { from { opacity: .55; } to { opacity: .9; } }
     .wrap{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px}
-    .card{width:100%;max-width:820px;background:color-mix(in srgb,var(--card),transparent 10%);backdrop-filter:blur(6px);border:1px solid var(--line);border-radius:22px;box-shadow:0 18px 60px rgba(0,0,0,.35)}
+    .card{
+      width:100%;max-width:820px;
+      background:rgba(18,18,20,.45); /* translucent */
+      backdrop-filter:saturate(120%) blur(10px);
+      -webkit-backdrop-filter:saturate(120%) blur(10px);
+      border:1px solid rgba(255,255,255,.08);
+      border-radius:22px;
+      box-shadow:0 18px 60px rgba(0,0,0,.35)
+    }
     .body{padding:28px}
     h1{margin:0 0 12px;font-weight:900;font-size:28px;letter-spacing:.2px}
     p{margin:0 0 18px;color:var(--muted)}
@@ -48,7 +56,15 @@
     .btn.primary{border-color:color-mix(in srgb,var(--accent),#fff 70%);background:linear-gradient(180deg, color-mix(in srgb,var(--accent), transparent 70%), rgba(0,0,0,.2));color:#e6fff9}
     .btn.secondary{border-color:#3a3a42; color:#f1f1f6; background:#0e0e12}
     .btn[disabled]{opacity:.5;cursor:not-allowed}
-    .panel{margin-top:18px;border:1px solid var(--line);border-radius:14px;background:#0c0c0f;padding:18px}
+    .panel{
+      margin-top:18px;
+      border:1px solid rgba(255,255,255,.08);
+      border-radius:14px;
+      background:rgba(12,12,15,.50); /* translucent */
+      backdrop-filter:saturate(120%) blur(6px);
+      -webkit-backdrop-filter:saturate(120%) blur(6px);
+      padding:18px
+    }
     .panel-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:6px}
     .panel-header .kicker{color:#a7f3d0;font-size:12px;font-weight:700;letter-spacing:.4px}
     .copy-btn{opacity:0; pointer-events:none; transform:translateY(-4px); transition:opacity .25s ease, transform .25s ease;}
